# Routes/routes.js
@@ -1,5 +1,6 @@
 const express = require("express");
 const authController = require("../Controller/authController");
+const articleController = require("../Controller/articleController");
 const profileController = require("../Controller/profileController");
 
 const router = express.Router();
@@ -9,6 +10,11 @@ router.post("/auth/login", authController.login);
 router.post("/auth/register", authController.register);
 router.post("/auth/forgotPassword", authController.forgotPassword);
 router.post("/auth/refreshToken", authController.refreshToken)
+
+//Article Routes
+router.get("/article/count", articleController.getArticlesCount);
+router.get("/article/page/:pagenumber", articleController.getArticles);
+router.get("/article/details/:content_id", articleController.getArticleDetails);
 
 //Profile Routes
 router.get("/profile", profileController.getProfile);
